Revert "asset path"
This reverts commit 35e7f61c5143c4859cc27ad18c5779ff61e57d5f.

--- a/app/assets/javascripts/easymarklet/consumer.js.erb
+++ b/app/assets/javascripts/easymarklet/consumer.js.erb
@@ -139,7 +139,7 @@
       for(var i = 0; i<bookmarklet.consumer.css.length; i++){
         var src = bookmarklet.consumer.css[i]
         var css = document.createElement('LINK');
-        css.href = src;
+        css.href = full_host + src;
         css.type = 'text/css';
         css.media = 'screen';
         css.rel = 'stylesheet';
