protocol must be defined

--- a/app/assets/javascripts/easymarklet/consumer.js.erb
+++ b/app/assets/javascripts/easymarklet/consumer.js.erb
@@ -20,6 +20,7 @@
     <% if Rails.env.production? or Rails.env.staging?%>
       var protocol = 'https';
     <% else  %>
+      var protocol = 'http';
       var port = '3000';
     <% end %>
     if(bookmarklet.protocol){
